# VO

./: .gitignore  CMakeLists.txt
.kdev4/: VO.kdev4
config/: default.yaml
include/lmars/: camera.h  common_include.h  config.h  edgeprojectxyz2uvposeonly.h  frame.h  g2o_types.h  map.h  mappoint.h  visualodometry.h
src/: CMakeLists.txt  camera.cpp  config.cpp  edgeprojectxyz2uvposeonly.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visualodometry.cpp
test/: CMakeLists.txt  run_vo.cpp
